✨ discloseテーブルの作成
