# backend/docs/swagger.yaml
@@ -252,6 +252,15 @@ definitions:
         type: string
       requesterID:
         type: string
+    required:
+    - deadline
+    - disclosed
+    - id
+    - inProgress
+    - issuedTime
+    - passerID
+    - preventedBy
+    - requesterID
     type: object
   handlers.DisclosureUpdateRequest:
     properties:
@@ -292,6 +301,8 @@ definitions:
       id:
         type: integer
       name:
+        type: string
+      userId:
         type: string
     type: object
   handlers.SubscriptionCreateRequest:
@@ -806,12 +817,6 @@ paths:
       consumes:
       - application/json
       description: ユーザが受けた開示請求一覧を取得する
-      parameters:
-      - description: 開示請求を出したユーザのID
-        in: query
-        name: requesterID
-        required: true
-        type: string
       produces:
       - application/json
       responses:
